; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_bitops.c_ext2fs_clear_bit.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_bitops.c_ext2fs_clear_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_clear_bit(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  store i8* %8, i8** %7, align 8
  %9 = load i32, i32* %3, align 4
  %10 = lshr i32 %9, 3
  %11 = load i8*, i8** %7, align 8
  %12 = zext i32 %10 to i64
  %13 = getelementptr inbounds i8, i8* %11, i64 %12
  store i8* %13, i8** %7, align 8
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, 7
  %16 = shl i32 1, %15
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = load i8, i8* %18, align 1
  %20 = zext i8 %19 to i32
  %21 = and i32 %17, %20
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %5, align 4
  %23 = xor i32 %22, -1
  %24 = load i8*, i8** %7, align 8
  %25 = load i8, i8* %24, align 1
  %26 = zext i8 %25 to i32
  %27 = and i32 %26, %23
  %28 = trunc i32 %27 to i8
  store i8 %28, i8* %24, align 1
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
